exports[`no-null > invalid(1): const foo = null 1`] = `

  1 | const foo = null

`;

exports[`no-null > invalid(1): const foo = null 2`] = `

Message:
> 1 | const foo = null
    |             ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | const foo = undefined

`;

exports[`no-null > invalid(10): var foo = 1, bar = null, baz = 2; 1`] = `

  1 | var foo = 1, bar = null, baz = 2;

`;

exports[`no-null > invalid(10): var foo = 1, bar = null, baz = 2; 2`] = `

Message:
> 1 | var foo = 1, bar = null, baz = 2;
    |                    ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/2: Remove \`null\`.:
  1 | var foo = 1, bar, baz = 2;

Suggestion 2/2: Replace \`null\` with \`undefined\`.:
  1 | var foo = 1, bar = undefined, baz = 2;

`;

exports[`no-null > invalid(11): const foo = null; 1`] = `

  1 | const foo = null;

`;

exports[`no-null > invalid(11): const foo = null; 2`] = `

Message:
> 1 | const foo = null;
    |             ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | const foo = undefined;

`;

exports[`no-null > invalid(12): const foo = null; 1`] = `

Options:
- checkArguments: false

Code:
  1 | const foo = null;

`;

exports[`no-null > invalid(12): const foo = null; 2`] = `

Message:
> 1 | const foo = null;
    |             ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | const foo = undefined;

`;

exports[`no-null > invalid(13): function foo() {\n\treturn null;\n} 1`] = `

Options:
- checkArguments: false

Code:
  1 | function foo() {
  2 | 	return null;
  3 | }

`;

exports[`no-null > invalid(13): function foo() {\n\treturn null;\n} 2`] = `

Message:
  1 | function foo() {
> 2 | 	return null;
    | 	       ^^^^ Use \`undefined\` instead of \`null\`.
  3 | }

Suggestion 1/2: Remove \`null\`.:
  1 | function foo() {
  2 | 	return;
  3 | }

Suggestion 2/2: Replace \`null\` with \`undefined\`.:
  1 | function foo() {
  2 | 	return undefined;
  3 | }

`;

exports[`no-null > invalid(14): if (foo === null) {} 1`] = `

Options:
- checkArguments: false
  checkStrictEquality: true

Code:
  1 | if (foo === null) {}

`;

exports[`no-null > invalid(14): if (foo === null) {} 2`] = `

Message:
> 1 | if (foo === null) {}
    |             ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | if (foo === undefined) {}

`;

exports[`no-null > invalid(15): foo([null]) 1`] = `

Options:
- checkArguments: false

Code:
  1 | foo([null])

`;

exports[`no-null > invalid(15): foo([null]) 2`] = `

Message:
> 1 | foo([null])
    |      ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | foo([undefined])

`;

exports[`no-null > invalid(16): foo(bar ?? null) 1`] = `

Options:
- checkArguments: false

Code:
  1 | foo(bar ?? null)

`;

exports[`no-null > invalid(16): foo(bar ?? null) 2`] = `

Message:
> 1 | foo(bar ?? null)
    |            ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | foo(bar ?? undefined)

`;

exports[`no-null > invalid(17): foo(...[null]) 1`] = `

Options:
- checkArguments: false

Code:
  1 | foo(...[null])

`;

exports[`no-null > invalid(17): foo(...[null]) 2`] = `

Message:
> 1 | foo(...[null])
    |         ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | foo(...[undefined])

`;

exports[`no-null > invalid(18): new HttpResponse([null]) 1`] = `

Options:
- checkArguments: false

Code:
  1 | new HttpResponse([null])

`;

exports[`no-null > invalid(18): new HttpResponse([null]) 2`] = `

Message:
> 1 | new HttpResponse([null])
    |                   ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | new HttpResponse([undefined])

`;

exports[`no-null > invalid(19): if (foo === null) {} 1`] = `

Options:
- checkStrictEquality: true

Code:
  1 | if (foo === null) {}

`;

exports[`no-null > invalid(19): if (foo === null) {} 2`] = `

Message:
> 1 | if (foo === null) {}
    |             ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | if (foo === undefined) {}

`;

exports[`no-null > invalid(2): foo(null) 1`] = `

  1 | foo(null)

`;

exports[`no-null > invalid(2): foo(null) 2`] = `

Message:
> 1 | foo(null)
    |     ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | foo(undefined)

`;

exports[`no-null > invalid(20): if (null === foo) {} 1`] = `

Options:
- checkStrictEquality: true

Code:
  1 | if (null === foo) {}

`;

exports[`no-null > invalid(20): if (null === foo) {} 2`] = `

Message:
> 1 | if (null === foo) {}
    |     ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | if (undefined === foo) {}

`;

exports[`no-null > invalid(21): if (foo !== null) {} 1`] = `

Options:
- checkStrictEquality: true

Code:
  1 | if (foo !== null) {}

`;

exports[`no-null > invalid(21): if (foo !== null) {} 2`] = `

Message:
> 1 | if (foo !== null) {}
    |             ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | if (foo !== undefined) {}

`;

exports[`no-null > invalid(22): if (null !== foo) {} 1`] = `

Options:
- checkStrictEquality: true

Code:
  1 | if (null !== foo) {}

`;

exports[`no-null > invalid(22): if (null !== foo) {} 2`] = `

Message:
> 1 | if (null !== foo) {}
    |     ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | if (undefined !== foo) {}

`;

exports[`no-null > invalid(23): new Object.create(null) 1`] = `

  1 | new Object.create(null)

`;

exports[`no-null > invalid(23): new Object.create(null) 2`] = `

Message:
> 1 | new Object.create(null)
    |                   ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | new Object.create(undefined)

`;

exports[`no-null > invalid(24): new foo.insertBefore(bar, null) 1`] = `

  1 | new foo.insertBefore(bar, null)

`;

exports[`no-null > invalid(24): new foo.insertBefore(bar, null) 2`] = `

Message:
> 1 | new foo.insertBefore(bar, null)
    |                           ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | new foo.insertBefore(bar, undefined)

`;

exports[`no-null > invalid(25): create(null) 1`] = `

  1 | create(null)

`;

exports[`no-null > invalid(25): create(null) 2`] = `

Message:
> 1 | create(null)
    |        ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | create(undefined)

`;

exports[`no-null > invalid(26): insertBefore(bar, null) 1`] = `

  1 | insertBefore(bar, null)

`;

exports[`no-null > invalid(26): insertBefore(bar, null) 2`] = `

Message:
> 1 | insertBefore(bar, null)
    |                   ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | insertBefore(bar, undefined)

`;

exports[`no-null > invalid(27): Object[\"create\"](null) 1`] = `

  1 | Object["create"](null)

`;

exports[`no-null > invalid(27): Object[\"create\"](null) 2`] = `

Message:
> 1 | Object["create"](null)
    |                  ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | Object["create"](undefined)

`;

exports[`no-null > invalid(28): foo[\"insertBefore\"](bar, null) 1`] = `

  1 | foo["insertBefore"](bar, null)

`;

exports[`no-null > invalid(28): foo[\"insertBefore\"](bar, null) 2`] = `

Message:
> 1 | foo["insertBefore"](bar, null)
    |                          ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | foo["insertBefore"](bar, undefined)

`;

exports[`no-null > invalid(29): Object[create](null) 1`] = `

  1 | Object[create](null)

`;

exports[`no-null > invalid(29): Object[create](null) 2`] = `

Message:
> 1 | Object[create](null)
    |                ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | Object[create](undefined)

`;

exports[`no-null > invalid(3): if (foo == null) {} 1`] = `

  1 | if (foo == null) {}

`;

exports[`no-null > invalid(3): if (foo == null) {} 2`] = `

Message:
> 1 | if (foo == null) {}
    |            ^^^^ Use \`undefined\` instead of \`null\`.

Output:
  1 | if (foo == undefined) {}

`;

exports[`no-null > invalid(30): foo[insertBefore](bar, null) 1`] = `

  1 | foo[insertBefore](bar, null)

`;

exports[`no-null > invalid(30): foo[insertBefore](bar, null) 2`] = `

Message:
> 1 | foo[insertBefore](bar, null)
    |                        ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | foo[insertBefore](bar, undefined)

`;

exports[`no-null > invalid(31): Object[null](null) 1`] = `

  1 | Object[null](null)

`;

exports[`no-null > invalid(31): Object[null](null) 2`] = `

Message:
> 1 | Object[null](null)
    |        ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | Object[undefined](null)

`;

exports[`no-null > invalid(31): Object[null](null) 3`] = `

Message:
> 1 | Object[null](null)
    |              ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | Object[null](undefined)

`;

exports[`no-null > invalid(32): Object.notCreate(null) 1`] = `

  1 | Object.notCreate(null)

`;

exports[`no-null > invalid(32): Object.notCreate(null) 2`] = `

Message:
> 1 | Object.notCreate(null)
    |                  ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | Object.notCreate(undefined)

`;

exports[`no-null > invalid(33): foo.notInsertBefore(foo, null) 1`] = `

  1 | foo.notInsertBefore(foo, null)

`;

exports[`no-null > invalid(33): foo.notInsertBefore(foo, null) 2`] = `

Message:
> 1 | foo.notInsertBefore(foo, null)
    |                          ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | foo.notInsertBefore(foo, undefined)

`;

exports[`no-null > invalid(34): NotObject.create(null) 1`] = `

  1 | NotObject.create(null)

`;

exports[`no-null > invalid(34): NotObject.create(null) 2`] = `

Message:
> 1 | NotObject.create(null)
    |                  ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | NotObject.create(undefined)

`;

exports[`no-null > invalid(35): lib.Object.create(null) 1`] = `

  1 | lib.Object.create(null)

`;

exports[`no-null > invalid(35): lib.Object.create(null) 2`] = `

Message:
> 1 | lib.Object.create(null)
    |                   ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | lib.Object.create(undefined)

`;

exports[`no-null > invalid(36): Object.create(...[null]) 1`] = `

  1 | Object.create(...[null])

`;

exports[`no-null > invalid(36): Object.create(...[null]) 2`] = `

Message:
> 1 | Object.create(...[null])
    |                   ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | Object.create(...[undefined])

`;

exports[`no-null > invalid(37): Object.create(null, bar, extraArgument) 1`] = `

  1 | Object.create(null, bar, extraArgument)

`;

exports[`no-null > invalid(37): Object.create(null, bar, extraArgument) 2`] = `

Message:
> 1 | Object.create(null, bar, extraArgument)
    |               ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | Object.create(undefined, bar, extraArgument)

`;

exports[`no-null > invalid(38): foo.insertBefore(null) 1`] = `

  1 | foo.insertBefore(null)

`;

exports[`no-null > invalid(38): foo.insertBefore(null) 2`] = `

Message:
> 1 | foo.insertBefore(null)
    |                  ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | foo.insertBefore(undefined)

`;

exports[`no-null > invalid(39): foo.insertBefore(foo, null, bar) 1`] = `

  1 | foo.insertBefore(foo, null, bar)

`;

exports[`no-null > invalid(39): foo.insertBefore(foo, null, bar) 2`] = `

Message:
> 1 | foo.insertBefore(foo, null, bar)
    |                       ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | foo.insertBefore(foo, undefined, bar)

`;

exports[`no-null > invalid(4): if (foo != null) {} 1`] = `

  1 | if (foo != null) {}

`;

exports[`no-null > invalid(4): if (foo != null) {} 2`] = `

Message:
> 1 | if (foo != null) {}
    |            ^^^^ Use \`undefined\` instead of \`null\`.

Output:
  1 | if (foo != undefined) {}

`;

exports[`no-null > invalid(40): foo.insertBefore(...[foo], null) 1`] = `

  1 | foo.insertBefore(...[foo], null)

`;

exports[`no-null > invalid(40): foo.insertBefore(...[foo], null) 2`] = `

Message:
> 1 | foo.insertBefore(...[foo], null)
    |                            ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | foo.insertBefore(...[foo], undefined)

`;

exports[`no-null > invalid(41): foo.insertBefore(null, bar) 1`] = `

  1 | foo.insertBefore(null, bar)

`;

exports[`no-null > invalid(41): foo.insertBefore(null, bar) 2`] = `

Message:
> 1 | foo.insertBefore(null, bar)
    |                  ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | foo.insertBefore(undefined, bar)

`;

exports[`no-null > invalid(42): Object.create(bar, null) 1`] = `

  1 | Object.create(bar, null)

`;

exports[`no-null > invalid(42): Object.create(bar, null) 2`] = `

Message:
> 1 | Object.create(bar, null)
    |                    ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/1: Replace \`null\` with \`undefined\`.:
  1 | Object.create(bar, undefined)

`;

exports[`no-null > invalid(5): if (null == foo) {} 1`] = `

  1 | if (null == foo) {}

`;

exports[`no-null > invalid(5): if (null == foo) {} 2`] = `

Message:
> 1 | if (null == foo) {}
    |     ^^^^ Use \`undefined\` instead of \`null\`.

Output:
  1 | if (undefined == foo) {}

`;

exports[`no-null > invalid(6): if (null != foo) {} 1`] = `

  1 | if (null != foo) {}

`;

exports[`no-null > invalid(6): if (null != foo) {} 2`] = `

Message:
> 1 | if (null != foo) {}
    |     ^^^^ Use \`undefined\` instead of \`null\`.

Output:
  1 | if (undefined != foo) {}

`;

exports[`no-null > invalid(7): function foo() {\n\treturn null;\n} 1`] = `

  1 | function foo() {
  2 | 	return null;
  3 | }

`;

exports[`no-null > invalid(7): function foo() {\n\treturn null;\n} 2`] = `

Message:
  1 | function foo() {
> 2 | 	return null;
    | 	       ^^^^ Use \`undefined\` instead of \`null\`.
  3 | }

Suggestion 1/2: Remove \`null\`.:
  1 | function foo() {
  2 | 	return;
  3 | }

Suggestion 2/2: Replace \`null\` with \`undefined\`.:
  1 | function foo() {
  2 | 	return undefined;
  3 | }

`;

exports[`no-null > invalid(8): let foo = null; 1`] = `

  1 | let foo = null;

`;

exports[`no-null > invalid(8): let foo = null; 2`] = `

Message:
> 1 | let foo = null;
    |           ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/2: Remove \`null\`.:
  1 | let foo;

Suggestion 2/2: Replace \`null\` with \`undefined\`.:
  1 | let foo = undefined;

`;

exports[`no-null > invalid(9): var foo = null; 1`] = `

  1 | var foo = null;

`;

exports[`no-null > invalid(9): var foo = null; 2`] = `

Message:
> 1 | var foo = null;
    |           ^^^^ Use \`undefined\` instead of \`null\`.

Suggestion 1/2: Remove \`null\`.:
  1 | var foo;

Suggestion 2/2: Replace \`null\` with \`undefined\`.:
  1 | var foo = undefined;

`;
